# OpenEvalGate

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: 00_getting_started_for_practitioners.md  00_trust_preservation_thesis.md  01_manifesto.md  02_production_genai_maturity_model.md  03_golden_eval_set_guide.md  04_model_arena_guide.md  05_reasoning_vs_enforcement.md  06_sop_compiler_guide.md  07_input_output_perimeter.md  08_output_critic_guide.md  09_launch_gate_guide.md  10_observability_checklist.md  11_business_behavior_contract.md  12_domain_owner_feedback_loop.md  13_tail_risk_and_p0_failures.md  14_automation_boundary_and_escalation.md  15_chatbot_metric_stack.md  16_research_evidence_and_competitive_landscape.md  17_synthetic_boundary_case_guide.md  launch-gates-and-evidence-scoring.md  review-modes.md
docs/architecture/: code-map.md
docs/contracts/: README.md  cli-output-v1.md  core-compatibility-v1.md  eval-run-provenance-v1.md
docs/development/: validation-matrix.md
docs/integrations/: external-runner-handoff-v1.md  github-actions.md
docs/releases/: 0.1.0.md
docs/roadmap/: README.md  iteration-01-correctness-and-release-semantics.md  iteration-02-public-repository-readiness.md  iteration-03-adoption-and-external-validation.md  public-launch-checklist.md  release-milestones.md
examples/: README.md
examples/customer_support_assistant/: README.md  action_risk_matrix.csv  agent_behavior_change_request.md  assistant_prd.md  automation_boundary_matrix.md  business_behavior_contract.md  chatbot_success_metric_stack.md  domain_owner_feedback_loop.md  escalation_contract.yaml  eval_cases.yaml  eval_results.csv  generated_launch_report.md  human_escalation_design.md  launch_gate_review.md  launch_report.md  model_arena_scorecard.csv  output_critic_rubric.csv  p0_failure_mode_checklist.md  purpose_built_assistant_scope.md  review_context.yaml  review_policy.yaml  routing_policy.yaml  run_manifest.yaml  tail_risk_eval_cases.yaml  trust_preservation_review.md
examples/education_assistant/: README.md  action_risk_matrix.csv  assistant_prd.md  automation_boundary_matrix.md  business_behavior_contract.md  chatbot_success_metric_stack.md  escalation_contract.yaml  eval_cases.yaml  eval_results.csv  generated_launch_report.md  human_escalation_design.md  launch_gate_review.md  launch_report.md  output_critic_rubric.csv  review_context.yaml  review_policy.yaml  routing_policy.yaml  run_manifest.yaml  trust_preservation_review.md
examples/presales_assistant/: README.md  action_risk_matrix.csv  assistant_prd.md  automation_boundary_matrix.md  business_behavior_contract.md  chatbot_success_metric_stack.md  escalation_contract.yaml  eval_cases.yaml  eval_results.csv  generated_launch_report.md  human_escalation_design.md  launch_gate_review.md  launch_report.md  model_arena_scorecard.csv  output_critic_rubric.csv  review_context.yaml  review_policy.yaml  routing_policy.yaml  run_manifest.yaml  trust_preservation_review.md
examples/subscription_support_assistant/: README.md  action_risk_matrix.csv  artifact_index.yaml  assistant_prd.md  automation_boundary_matrix.md  business_behavior_contract.md  chatbot_success_metric_stack.md  domain_owner_feedback_loop.md  escalation_contract.yaml  eval_cases.yaml  eval_results.csv  generated_launch_report.md  human_escalation_design.md  launch_gate_review.md  model_arena_scorecard.csv  output_critic_rubric.csv  p0_failure_mode_checklist.md  purpose_built_assistant_scope.md  review_context.yaml  review_policy.yaml  routing_policy.yaml  run_manifest.yaml  trust_preservation_review.md
openevalgate/: __init__.py  action_risk.py  assessment.py  cli.py  escalation.py  eval_results.py  hard_gate_policy.py  init_project.py  launch_gate_review.py  local_paths.py  output.py  project_inspection.py  provenance.py  report.py  review_policy.py  routing.py  schema.py  scorer.py  validator.py  version.py
openevalgate/resources/: __init__.py
schemas/: eval-run-artifact-index-v1.schema.json  eval-run-manifest-v1.schema.json  eval-run-provenance-expected-v1.schema.json  eval-run-review-context-v1.schema.json  golden_eval_case_schema.yaml  routing-policy-v1.schema.json
scripts/: __init__.py  check_markdown_links.py  verify_distribution_artifacts.py
templates/: agent_action_risk_matrix.csv  agent_behavior_change_request.md  ai_assistant_prd.md  automation_boundary_matrix.md  business_behavior_contract.md  chatbot_success_metric_stack.md  domain_owner_feedback_loop.md  escalation_contract.yaml  eval_results.csv  eval_run_output.md  golden_eval_case.yaml  golden_eval_incident_ingestion.md  golden_eval_review_agenda.md  golden_eval_set.csv  golden_eval_stakeholder_alignment_brief.md  human_escalation_design.md  human_escalation_rubric.md  launch_gate_review.md  launch_readiness_report.md  model_arena_scorecard.csv  observability_checklist.md  output_critic_rubric.csv  p0_failure_mode_checklist.md  post_launch_monitoring_plan.md  purpose_built_assistant_scope.md  routing_policy.yaml  tail_risk_eval_cases.yaml  trust_preservation_review.md
tests/: conftest.py  test_assessment.py  test_cli_outputs.py  test_distribution_artifacts.py  test_escalation.py  test_eval_results.py  test_example_boundary_suites.py  test_external_runner_handoff.py  test_hard_gate_policy.py  test_local_paths.py  test_project_inspection.py  test_provenance.py  test_provenance_contract_fixtures.py  test_provenance_fixtures.py  test_provenance_resources.py  test_report.py  test_review_policy.py  test_routing.py  test_schema.py  test_validator.py  test_version.py
(+209 files in other folders)
