[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openevalgate"
version = "0.1.1"
description = "GenAI governance, AI agent evaluation, and launch-readiness templates for production assistants and agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenEvalGate contributors" }
]
keywords = [
  "genai",
  "genai-governance",
  "evals",
  "llm",
  "llm-evaluation",
  "agents",
  "ai-agent-evaluation",
  "agent-safety",
  "golden-evals",
  "launch-readiness",
  "ai-governance",
  "ai-risk-management",
  "llmops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
openevalgate = "openevalgate.cli:main"

[tool.setuptools.packages.find]
include = ["openevalgate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
