[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openevalgate"
version = "0.1.1"
description = "GenAI governance and launch-readiness evidence for agent behavior, human escalation, oversight, and safe production deployment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Chenye Zhu" }
]
maintainers = [
  { name = "Chenye Zhu" }
]
keywords = [
  "genai",
  "genai-governance",
  "evals",
  "llm",
  "llm-evaluation",
  "agents",
  "ai-agent-evaluation",
  "agent-safety",
  "golden-evals",
  "launch-readiness",
  "ai-governance",
  "ai-risk-management",
  "human-in-the-loop",
  "human-escalation",
  "ai-oversight",
  "agent-handoffs",
  "escalation-contracts",
  "llmops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://chenyezhu.com/"
Repository = "https://github.com/charliechenye/OpenEvalGate"
Issues = "https://github.com/charliechenye/OpenEvalGate/issues"
Documentation = "https://github.com/charliechenye/OpenEvalGate/tree/main/docs"
Changelog = "https://github.com/charliechenye/OpenEvalGate/blob/main/CHANGELOG.md"

[project.scripts]
openevalgate = "openevalgate.cli:main"

[tool.setuptools.packages.find]
include = ["openevalgate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
