[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "openevalgate"
version = "0.1.1"
description = "Local release-assurance framework for evidence-backed launch decisions for production AI assistants and agents."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Chenye Zhu" }
]
maintainers = [
  { name = "Chenye Zhu" }
]
keywords = [
  "genai",
  "genai-governance",
  "evals",
  "llm",
  "llm-evaluation",
  "agents",
  "ai-agent-evaluation",
  "agent-safety",
  "golden-evals",
  "launch-readiness",
  "ai-governance",
  "ai-risk-management",
  "human-in-the-loop",
  "human-escalation",
  "ai-oversight",
  "agent-handoffs",
  "escalation-contracts",
  "llmops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "jsonschema[format-nongpl]>=4.23",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pip-audit>=2.7.3",
  "pytest>=8.0.0",
  "pytest-xdist>=3.6.1",
  "ruff>=0.6.9",
]

[project.urls]
Homepage = "https://chenyezhu.com/"
Repository = "https://github.com/charliechenye/OpenEvalGate"
Issues = "https://github.com/charliechenye/OpenEvalGate/issues"
Documentation = "https://github.com/charliechenye/OpenEvalGate/tree/main/docs"
Changelog = "https://github.com/charliechenye/OpenEvalGate/blob/main/CHANGELOG.md"

[project.scripts]
openevalgate = "openevalgate.cli:main"

[tool.setuptools.packages.find]
include = ["openevalgate*"]

[tool.setuptools.package-data]
"openevalgate.resources.schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["examples", "spec"]

[tool.ruff.lint]
# Keep the first public baseline focused on correctness findings; the existing
# source predates a repository-wide formatter baseline.
select = ["F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
